# wildchord-js

./: LICENSE.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: api.ts  app.scss  app.ts  chord-md.js  index.html  record.ts  styles.scss  types.ts
frontend/src/chordsheet-lang/: chordsheet.grammar  chordsheet.ts  parser.js  parser.terms.js
frontend/src/static/: login_form.html  pass_change_form.html  register_form.html
server/: Dockerfile  pyproject.toml
server/src/: manage.py
server/src/editor/: models.py  serializers.py  utils.py
server/src/editor/migrations/: 0002_record_str_id.py  0003_remove_record_id_alter_record_str_id.py  0004_rename_str_id_record_id.py  0006_remove_user_email_remove_user_first_name_and_more.py
server/src/wildchord/: asgi.py  settings.py  urls.py  wsgi.py
wildchord/editor/: admin.py  api.py  models.py  serializers.py  urls.py  views.py
wildchord/editor/migrations/: 0001_initial.py  0005_record_is_public.py
wildchord/editor/static/: chord-md.js  editor.js  login_form.html  pass_change_form.html  register_form.html  styles.scss
wildchord/editor/templates/editor/: editor.html  item_card_template.html  layout.html  login_form.html
wildchord/wildchord/: settings.py  urls.py
